# busy-bee

./: .gitignore  .prettierrc  Cargo.toml  TODO.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/web/: .prettierrc  eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
apps/web/src/: app.html
apps/web/src/lib/: constants.js  formats.js  global-context.js  rss-feeds.json  schema-utils.js
apps/web/src/lib/api/: article-processing-outputs.js  articles.js  awesome-rss-feeds.js  common.js  error.js  index.js  outputs.js  prompts.js  rss-feeds.js  sse.js
apps/web/src/lib/components/: article-actions-menu.svelte  article-into-post-form-dialog.svelte  article-status.svelte  bulk-delete-articles-dialog.svelte  bulk-delete-outputs-dialog.svelte  create-feed-form-dialog.svelte  create-instruction-prompt-form-dialog.svelte  delete-article-alert-dialog.svelte  delete-article-dialog.svelte  delete-instruction-prompt-dialog.svelte  delete-output-dialog.svelte  delete-rss-feed-dialog.svelte  delete-system-prompt-dialog.svelte  edit-instruction-prompt-form-dialog.svelte  error-alert.svelte  instruction-prompt-actions-menu.svelte  output-actions-menu.svelte  pagination-controls.svelte  pending.svelte  process-article-form-dialog.svelte  rss-feed-status.svelte  search-input.svelte  system-prompt-actions-menu.svelte  view-token-usage-dialog.svelte
apps/web/src/lib/editor/: editor-content.svelte  editor-toolbar.svelte  editor.svelte
apps/web/src/lib/hooks/: table.js
apps/web/src/lib/query/: article-processing-outputs.js  articles.js  awesome-rss-feeds.js  outputs.js  prompts.js  rss-feeds.js
apps/web/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte  create-feed-form-dialog.svelte  layout.css
apps/web/src/routes/[articleId]/: +page.js  (+1 more)
crates/api/: Cargo.toml  package.json
crates/api/src/: main.rs
crates/api/src/ai/: chat.rs  client.rs  mod.rs
crates/api/src/api/: err.rs  mod.rs  req.rs
crates/api/src/api/handlers/: article_processing_outputs.rs  articles.rs
crates/api/src/api/routers/: article_processing_outputs.rs  articles.rs
crates/api/src/app/: config.rs  events.rs  mod.rs  run.rs  state.rs
crates/api/src/infra/: amqp.rs  db.rs
crates/api/src/infra/db/: connection.rs  migrate.rs  mod.rs
crates/api/src/infra/db/migrations/: 20260512105725_articles.sql
crates/api/src/internal/: mod.rs
crates/api/src/internal/ai/: mod.rs
crates/api/src/internal/api/: err.rs  mod.rs  req.rs  resp.rs  state.rs
crates/api/src/internal/api/handlers/: article_processing_outputs.rs  articles.rs
crates/api/src/internal/api/routers/: article_processing_outputs.rs  articles.rs
crates/api/src/internal/app/: config.rs  mod.rs
crates/api/src/internal/infra/: amqp.rs  db.rs  mod.rs
crates/api/src/internal/infra/db/migrations/: 20260512105725_articles.sql
crates/api/src/internal/repos/: article_processing_outputs.rs  articles.rs  mod.rs
crates/api/src/internal/repos/types/: mod.rs  non_empty.rs  trimmed_string.rs
crates/api/src/internal/rss_consumer/: mod.rs
crates/api/src/internal/workers/: mod.rs
crates/api/src/internal/workers/article_processor/: mod.rs
crates/api/src/internal/workers/publisher/: mod.rs
crates/api/src/internal/workers/rss_consumer/: mod.rs
crates/api/src/repos/: article_processing_outputs.rs  articles.rs  common.rs  mod.rs  rss_feeds.rs
crates/api/src/repos/articles/: convert.rs  fns.rs  mod.rs  types.rs
crates/api/src/repos/outputs/: fns.rs  types.rs
crates/api/src/repos/rss_feeds/: fns.rs  types.rs
crates/api/src/repos/types/: length.rs  mod.rs  trimmed_string.rs
crates/api/src/workers/: mod.rs
crates/api/src/workers/api/: mod.rs  req.rs  resp.rs  run.rs
crates/api/src/workers/api/handlers/: article_processing_outputs.rs  articles.rs  mod.rs  notifications.rs  outputs.rs  rss_feeds.rs
crates/api/src/workers/api/routers/: article_processing_outputs.rs  articles.rs  mod.rs  notifications.rs  outputs.rs  rss_feeds.rs
crates/api/src/workers/article_processing/: channel.rs  mod.rs  processing.rs  run.rs
crates/api/src/workers/article_processor/: mod.rs
crates/api/src/workers/article_processor/prompts/: post.md
crates/api/src/workers/publisher/: mod.rs
crates/api/src/workers/rss_consumer/: mod.rs
crates/api/src/workers/rss_reader/: mod.rs  read.rs
crates/rss-reader/: Cargo.toml  package.json
crates/rss-reader/src/: config.rs  lib.rs  main.rs  worker.rs
crates/rss-reader/src/internal/: cli.rs  config.rs  mod.rs  worker.rs
crates/server/: Cargo.toml  package.json
crates/server/src/: main.rs
crates/server/src/ai/: chat.rs  client.rs
crates/server/src/app/: config.rs  mod.rs  run.rs  state.rs
crates/server/src/infra/db/: migrate.rs  mod.rs
crates/server/src/infra/db/migrations/: 20260512105725_articles.sql  20260609162016_prompts.sql
crates/server/src/repos/: common.rs  mod.rs
crates/server/src/repos/articles/: convert.rs  fns.rs  mod.rs  types.rs
crates/server/src/repos/instruction_prompts/: fns.rs  mod.rs  types.rs
crates/server/src/repos/outputs/: fns.rs  mod.rs  types.rs
crates/server/src/repos/rss_feeds/: fns.rs  mod.rs  types.rs
crates/server/src/repos/seen_articles/: fns.rs  mod.rs  types.rs
crates/server/src/repos/system_prompts/: fns.rs  mod.rs  types.rs
crates/server/src/workers/: mod.rs
crates/server/src/workers/api/: err.rs  mod.rs  run.rs
crates/server/src/workers/api/handlers/: articles.rs  instruction_prompts.rs  mod.rs  outputs.rs  rss_feeds.rs  system_prompts.rs
crates/server/src/workers/api/routers/: articles.rs  instruction_prompts.rs  mod.rs  notifications.rs  outputs.rs  system_prompts.rs
crates/server/src/workers/article_processing/: channel.rs  processing.rs  run.rs
crates/server/src/workers/rss_processing/: config.rs  db_poller.rs  mod.rs  reading.rs  reading_manager.rs  run.rs
crates/server/src/workers/rss_reader/: mod.rs  read.rs
crates/types/: Cargo.toml
crates/types/src/: length_check.rs  lib.rs  macros.rs  trimmed.rs  url.rs
(+162 files in other folders)
