[workspace]
resolver = "3"
members = ["crates/rss-reader"]

[workspace.dependencies]
redis = { version = "1.2.1", features = ["tokio-rustls-comp"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
