[workspace]
resolver = "3"
members = ["crates/api", "crates/types"]

[workspace.dependencies]
types = { path = "./crates/types" }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
tokio-util = "0.7.18"
sqlx = "0.9.0"
