[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rss-reader = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }
tokio-util = { workspace = true }

tokio-stream = "0.1.18"
dotenvy = "0.15.7"
url = { version = "2.5.8", features = ["serde"] }
