[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rss-reader = { workspace = true }
types = { workspace = true, features = ["serde", "sqlx"] }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }
tokio-util = { workspace = true }

tokio-stream = "0.1.18"
dotenvy = "0.15.7"
url = { version = "2.5.8", features = ["serde"] }
axum = "0.8.9"
uuid = { version = "1.23.1", features = ["serde", "v7"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }
serde_path_to_error = "0.1.20"
genai = "0.5.3"

[lints.clippy]
pedantic = "warn"
