[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { workspace = true, features = ["serde", "sqlx"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }

tokio-stream = "0.1.18"
dotenvy = "0.15.7"
axum = "0.8.9"
uuid = { version = "1.23.1", features = ["serde", "v7"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_path_to_error = "0.1.20"
genai = "0.5.3"
dom_smoothie = "0.17.0"
reqwest = "0.13.3"
rss = "2.0.12"

[lints.clippy]
pedantic = "warn"
