[package]
name = "rss-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

dom_smoothie = "0.17.0"
reqwest = "0.13.3"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive", "string"] }
toml = "1.1.2"
tokio-util = "0.7.18"
thiserror = "2.0.18"
lapin = "4.7.1"
serde_json = "1.0.149"
