[package]
name = "rss-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }
tokio-util = { workspace = true }

dom_smoothie = "0.17.0"
reqwest = "0.13.3"
rss = "2.0.12"
clap = { version = "4.6.1", features = ["derive", "string"] }
toml = "1.1.2"
