[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
url = { version = "2.5.8" }

serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
serde = [ "dep:serde", "url/serde" ]
sqlx = [ "dep:sqlx" ]

[lints.clippy]
pedantic = "warn"
